Closed Bug 386900 Opened 19 years ago Closed 19 years ago

Topic images rendered in wrong place on slashdot

Categories

(Core :: Layout: Floats, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: nnbugzilla, Assigned: sharparrow1)

References

()

Details

(Keywords: regression, testcase)

Attachments

(4 files)

Starting with the July 2 nightly "Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a6pre) Gecko/20070702 Minefield/3.0a6pre", some of the topic images on Slashdot are rendered in the wrong place. The first 2 topics at the top don't show an image; instead, 3 images are shown in the 3rd story (see attachment). This worked correctly in the previous nightly "Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a6pre) Gecko/20070701 Minefield/3.0a6pre"
It occurs in SeaMonkey, too, so it's a core bug.
Severity: minor → normal
Component: General → Layout
Keywords: regression
Product: Firefox → Core
QA Contact: general → layout
I still haven't figured out what's going on, but it's definitely that patch.
Blocks: 386147
Component: Layout → Layout: Floats
QA Contact: layout → layout.floats
Attached file Testcase
Ugh, I didn't realize that a band with zero floats might actually have floats in it... patch coming up.
Assignee: nobody → sharparrow1
Status: NEW → ASSIGNED
Attached patch PatchSplinter Review
Attachment #270995 - Flags: review?(roc)
Attached patch Patch (diff -w)Splinter Review
Comment on attachment 270995 [details] [diff] [review] Patch This might fix the underlying problem in bug 386182. PRBool result = PR_TRUE; if (0 != mBand.GetFloatCount()) { // XXX We should allow overflow by up to half a pixel here (bug 21193). if (mAvailSpaceRect.width < aFloatSize.width) { // The available width is too narrow (and its been impacted by a // prior float) result = PR_FALSE; } - else { + } + + if (!result) + return result; Couldn't this all be turned into "if (...) return PR_FALSE;"? + if (0 != mBand.GetFloatCount()) { if ((xa < mAvailSpaceRect.x) || (xb > mAvailSpaceRect.XMost())) { Just use &&
Attachment #270995 - Flags: superreview+
Attachment #270995 - Flags: review?(roc)
Attachment #270995 - Flags: review+
(In reply to comment #7) > This might fix the underlying problem in bug 386182. That can't be the right bug number...
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Flags: blocking1.9? → in-testsuite?
Resolution: --- → FIXED
Depends on: 402916
Depends on: 421710
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: