Bug 386900: Topic images rendered in wrong place on slashdot. r+sr=roc